[tool.poetry]
name = "ml-ops-project"
version = "0.1.0"
description = "End-to-End MLOps Project with Design Patterns"
authors = ["Your Name <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.4"
pytest = "^8.3.
5"pip install poetry
pymango = "^0.1.1"
pymongo = "^4.11.3"


[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
